# verilib-cli

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  functions_to_track.csv  plan-dist-manifest.json
.github/workflows/: bump-version.yml  ci.yml  docker-publish.yml  release.yml  test-deploy.yml  verilib-atomize.yml  verilib-verify.yml
.verilib/: atoms.json  config.json  specs.json  stubs.json
.verilib/curve25519-dalek/: layout.verilib
.verilib/curve25519-dalek/Vortex Core/: [0] - main.atom.verilib  [0] - main.meta.verilib  layout.verilib
.verilib/curve25519-dalek/src/: [10] - fmt.atom.verilib  [10] - fmt.meta.verilib  [11] - determine_curve25519_dalek_bits_warning.atom.verilib  [11] - determine_curve25519_dalek_bits_warning.meta.verilib  [12] - is_capable_simd.atom.verilib  [12] - is_capable_simd.meta.verilib
.verilib/curve25519-dalek/src/backend/: [2] - is_empty.atom.verilib  [2] - is_empty.meta.verilib  [4] - len.atom.verilib  [4] - len.meta.verilib  [5] - get_selected_backend.atom.verilib  [5] - get_selected_backend.meta.verilib
.verilib/curve25519-dalek/src/build.rs/: [0] - determine_curve25519_dalek_bits.atom.verilib  [0] - determine_curve25519_dalek_bits.meta.verilib
.verilib/curve25519-dalek/src/edwards.rs/: [0] - is_valid.atom.verilib  [0] - is_valid.meta.verilib  [10] - sum.atom.verilib  [10] - sum.meta.verilib  [11] - is_empty.atom.verilib  [11] - is_empty.meta.verilib  [12] - new.atom.verilib  [12] - new.meta.verilib  [13] - mul_base.atom.verilib  [13] - mul_base.meta.verilib  [14] - as_affine_niels.atom.verilib  [14] - as_affine_niels.meta.verilib  [15] - mul_by_pow_2.atom.verilib  [15] - mul_by_pow_2.meta.verilib  [16] - optional_multiscalar_mul.atom.verilib  [16] - optional_multiscalar_mul.meta.verilib  [17] - as_projective.atom.verilib  [17] - as_projective.meta.verilib  [18] - default.atom.verilib  [18] - default.meta.verilib  [19] - step_2.atom.verilib  [19] - step_2.meta.verilib  [1] - ct_eq.atom.verilib  [1] - ct_eq.meta.verilib  [20] - neg.atom.verilib  [20] - neg.meta.verilib  [21] - as_bytes.meta.verilib  [22] - double.atom.verilib  [22] - double.meta.verilib  [23] - to_bytes.meta.verilib  [24] - mul_clamped.atom.verilib  [24] - mul_clamped.meta.verilib  [25] - to_montgomery_batch.atom.verilib  [25] - to_montgomery_batch.meta.verilib  [26] - step_1.atom.verilib  [26] - step_1.meta.verilib  [27] - mul_by_cofactor.atom.verilib  [27] - mul_by_cofactor.meta.verilib  [28] - ct_eq.atom.verilib  [28] - ct_eq.meta.verilib  (+61 more)
.verilib/curve25519-dalek/src/field.rs/: [0] - batch_invert.atom.verilib  [0] - batch_invert.meta.verilib  [1] - invert.atom.verilib  [1] - invert.meta.verilib  [2] - pow_p58.atom.verilib  [2] - pow_p58.meta.verilib  [3] - is_zero.atom.verilib  [3] - is_zero.meta.verilib  [4] - is_negative.atom.verilib  [4] - is_negative.meta.verilib  [5] - pow22501.atom.verilib  [5] - pow22501.meta.verilib  (+8 more)
action/: README.md  action.yml
action/deploy/: README.md  action.yml
action/rust/: README.md  action.yml
data/: verification_config.json  verification_output.txt
docs/: GITHUB_ACTIONS_DESIGN.md  design.md
docs/structure/: 001_motivation.md  002_requirements.md  003_implementation.md
docs/web-cli-probe/: 001_motivation.md
scripts/: analyze_verus_specs_proofs.py
src/: auth.rs  cli.rs  config.rs  constants.rs  deploy.rs  download.rs  executor.rs  init.rs  keyring_utils.rs  main.rs  reclone.rs  status.rs
src/commands/: api.rs  atomize.rs  auth.rs  create.rs  deploy.rs  init.rs  mod.rs  pull.rs  reclone.rs  specify.rs  status.rs  status_update.rs  types.rs  verify.rs
src/download/: client.rs  error.rs  mod.rs  processor.rs  types.rs
src/storage/: factory.rs  file.rs  keyring.rs  mod.rs  types.rs
src/structure/: certs.rs  config.rs  executor.rs  mod.rs  probe.rs  utils.rs
tests/: regression_test.rs  structure_commands_test.rs
tests/fixtures/: atoms.json  config.json  config_auto_validate.json  proofs.json  specs.json  stubs.json  tracked_functions.csv
tests/helpers/: mock_probe_verus.rs
(+939 files in other folders)
