[package]
name = "verilib-cli"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/Beneficial-AI-Foundation/verilib-cli"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rpassword = "7.3"
whoami = "1.6.1"
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

