[package]
name = "verilib-cli"
version = "0.1.6-prerelease-theo"
edition = "2021"
description = "A command-line tool for managing Verilib repositories and API interactions"
homepage = "https://github.com/Beneficial-AI-Foundation/verilib-cli"
repository = "https://github.com/Beneficial-AI-Foundation/verilib-cli"
license = "MIT"
keywords = ["cli", "verilib", "api", "repository"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rpassword = "7.3"
whoami = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
regex = "1.x"

# Platform-specific keyring dependencies to avoid cross-compilation issues
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.0", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.0", features = ["windows-native"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
keyring = { version = "3.0", features = ["sync-secret-service"] }

# For non-x86_64 Linux targets, use basic keyring without dbus
[target.'cfg(all(target_os = "linux", not(target_arch = "x86_64")))'.dependencies]
keyring = { version = "3.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

