[package]
name = "verilib-cli"
version = "0.1.6"
edition = "2021"
description = "A command-line tool for managing Verilib repositories and API interactions"
homepage = "https://github.com/Beneficial-AI-Foundation/verilib-cli"
repository = "https://github.com/Beneficial-AI-Foundation/verilib-cli"
license = "MIT"
keywords = ["cli", "verilib", "api", "repository"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
rpassword = "7.3"
whoami = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
regex = "1.x"
dirs = "5.0"
sha2 = "0.10.9"
ratatui = "0.29.0"
crossterm = "0.29.0"
walkdir = "2.5.0"

# Dependencies for structure commands (merged from verilib-structure)
serde_yaml = "0.9"
percent-encoding = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
intervaltree = "0.2"
which = "8"

# Platform-specific keyring dependencies to avoid cross-compilation issues
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.0", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.0", features = ["windows-native"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
keyring = { version = "3.0", features = ["sync-secret-service"] }

# For non-x86_64 Linux targets, use basic keyring without dbus
[target.'cfg(all(target_os = "linux", not(target_arch = "x86_64")))'.dependencies]
keyring = { version = "3.0" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.24.0"

